--- a/src/Components/HomeScreen/HomeScreen.css
+++ b/src/Components/HomeScreen/HomeScreen.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 body{
-    background-color: #111;
+    color: white;
+    
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
