--- a/src/assets/FrontScreen/FrontPage.css
+++ b/src/assets/FrontScreen/FrontPage.css
@@ -1,3 +1,11 @@
+body{
+  background-color: black;
+}
+.wrapper{
+  width: auto;
+  height: 50%;
+  display: flex;
+}
 .items {
     padding: 70px 5%;
     max-width: 1100px;
@@ -56,6 +64,65 @@
     }
   }
   
+  .items {
+    padding: 70px 5%;
+    max-width: 1100px;
+    margin: auto;
+    display: flex;
+    justify-content: flex-end;
+    
+  }
+  
+  @media (max-width: 950px) {
+    .items {
+      flex-direction: column;
+    }
+  }
+  
+  .title {
+    font-size: 3rem;
+    line-height: 1.1;
+    margin-bottom: 8px;
+    padding-right: 100px;
+  }
+  
+  @media (max-width: 950px) {
+    .title {
+      font-size: 2.5rem;
+      text-align: center;
+      padding-right: initial;
+    }
+  }
+  
+  @media (max-width: 550px) {
+    .title {
+      font-size: 1.5rem;
+      text-align: center;
+    }
+  }
+  
+  .subtitle {
+    font-size: 1.5rem;
+    font-weight: normal;
+    line-height: normal;
+    padding-right: 100px;
+  }
+  
+  @media (max-width: 950px) {
+    .subtitle {
+      font-size: 1.25rem;
+      text-align: center;
+      padding-right: initial;
+    }
+  }
+  
+  @media (max-width: 550px) {
+    .subtitle {
+      font-size: 1.2rem;
+      text-align: center;
+    }
+  }
+  
   @media (max-width: 950px) {
     .imagewrapper {
       text-align: center;
@@ -66,6 +133,4 @@
     max-width: 100%;
     height: auto;
   }
-  .wrapper{
-    text-align: center;
-  }
+  
